--- a/.github/workflows/daily-feature-pipeline.yml
+++ b/.github/workflows/daily-feature-pipeline.yml
@@ -1,28 +1,29 @@
 name: daily-feature-pipeline
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Allows manual trigger
   schedule:
-    - cron: '11 11 * * *'
+    - cron: '0 0 * * *'  # Runs every day at midnight UTC
 
 jobs:
   test_schedule:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
+    if: github.event_name == 'schedule' && github.event.schedule == '0 0 * * *'
     steps:
-      - name: checkout repo content
+      - name: Checkout repository content
         uses: actions/checkout@v2
 
-      - name: setup python
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.9.18'
           
-      - name: install python packages
+      - name: Install Python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r ./requirements.txt
           
-      - name: execute python workflows from bash script
+      - name: Execute Python workflows from batch script
         env: 
           HOPSWORKS_API_KEY: ${{ secrets.HOPSWORKS_API_KEY }}
         run: |
